Update README.md (#1758)